Add support for wxAuiManager and wxAuiPaneInfo to XRC
Add XRC handler for wxAuiManager and include the existing wxAuiNotebook
handler into it (but notice that wxAuiToolBar handler added by a later #15686
in d2d78f1a473fc11c4948f64970d5073442ed3fc1 remains separate).

Also update the AUI dialog in the sample and stop hardcoding its size in
pixels.

See #13520.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -65,6 +65,7 @@ All:
 
 All (GUI):
 
+- Add support for wxAuiManager and wxAuiPaneInfo to XRC (Andrea Zanellato).
 - Update Scintilla to v3.6.3 (Paul Kulchenko).
 
 wxGTK:
