--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -66,6 +66,7 @@ All:
 All (GUI):
 
 - Add support for wxAuiManager and wxAuiPaneInfo to XRC (Andrea Zanellato).
+- Add support for wxSL_MIN_MAX_LABELS and wxSL_VALUE_LABEL to XRC (ousnius).
 - Update Scintilla to v3.6.3 (Paul Kulchenko).
 
 wxGTK:
