Implement wxDataViewChoiceByIndexRenderer for wxOSX
Add missing class implementation.

Closes #17452.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -82,6 +82,7 @@ wxOSX:
 - Remove extra borders around wxFilePickerCtrl (John Roberts).
 - Set up extensions filter correctly in wxFileDialog (nick863).
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
+- Implement wxDataViewChoiceByIndexRenderer (wanup).
 
 Unix:
 
