--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -71,6 +71,7 @@ All (GUI):
 wxGTK:
 
 - Implement setting link colours in wxHyperlinkCtrl for GTK+3 (Hanmac).
+- Support background colour in wxDataViewCtrl attributes.
 
 wxMSW:
 
