Don't indent the expander column in list wxDataViewCtrl in wxOSX
Indenting the column contents to leave enough space for the expanders is
unnecessary in this case, so just don't do it.

Closes #17409.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -85,6 +85,7 @@ wxOSX:
 - Set up extensions filter correctly in wxFileDialog (nick863).
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
 - Implement wxDataViewChoiceByIndexRenderer (wanup).
+- Fix unnecessary indentation in list-like wxDataViewCtrl (Andreas Falkenhahn).
 
 Unix:
 
