Fix GetPartialTextExtents() to handle non-BMP chars under OS X
On OS X, wxString operates on UTF-32 code units, but CoreText API use UTF-16
code units. So we need to take care of surrogate pairs.

Closes https://github.com/wxWidgets/wxWidgets/pull/261

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -81,6 +81,7 @@ wxMSW:
 
 wxOSX:
 
+- Fix handling of non-BMP characters in GetPartialTextExtents() (ARATA Mizuki).
 - Remove extra borders around wxFilePickerCtrl (John Roberts).
 - Set up extensions filter correctly in wxFileDialog (nick863).
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
