--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -63,6 +63,7 @@ All:
   wxLog::SetVerbose() which now only affects wxLogVerbose().
 - Add wxFileType::GetExpandedCommand() (troelsk).
 - Make it easier to convert to/from UTF-8-encoded std::string (ARATA Mizuki).
+- Add support for loading dynamic lexer in wxStyledTextCtrl (New Pagodi).
 
 All (GUI):
 
