Improve wxSpinCtrl best size computation in wxGTK
Don't hardcode completely arbitrary width of 95px for the text part, but
compute it from the values this control is actually used for.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -76,6 +76,7 @@ wxGTK:
 
 - Implement setting link colours in wxHyperlinkCtrl for GTK+3 (Hanmac).
 - Support background colour in wxDataViewCtrl attributes.
+- Improve wxSpinCtrl best size calculation.
 
 wxMSW:
 
