--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -71,6 +71,7 @@ All (GUI):
 - Add support for wxSL_MIN_MAX_LABELS and wxSL_VALUE_LABEL to XRC (ousnius).
 - Update Scintilla to v3.6.3 (Paul Kulchenko).
 - Make wxDataViewCtrl::Expand() expand ancestors in native ports too.
+- Add wxListCtrl::SetHeaderAttr().
 
 wxGTK:
 
