Fix background colour returned by wxTextCtrl::GetStyle() in wxMSW
Don't return the background colour unless it's really set, otherwise we
returned black background even if it was never changed.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -94,6 +94,7 @@ wxMSW:
 - Fix crash when using wxCHMHelpController() in 64 bit builds (Xlord2).
 - Fix MDI menu display after failure to create a child frame (troelsk).
 - Fix wxScreenDC::GetSize() with multiple monitors (iwbnwif).
+- Fix background colour returned by wxTextCtrl::GetStyle() (Andreas Falkenhahn).
 
 wxOSX:
 
