--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -81,6 +81,7 @@ All (GUI):
 - Make wxDataViewCtrl::Expand() expand ancestors in native ports too.
 - Add wxDataViewCtrl::SetHeaderAttr().
 - Add wxListCtrl::SetHeaderAttr().
+- Implement auto complete in generic wxSearchCtrl (Eric Jensen).
 
 wxGTK:
 
