--- a/docs/msw/install.txt
+++ b/docs/msw/install.txt
@@ -106,7 +106,7 @@ Ready to use project files are provided for VC++ versions 7, 8, 9,
 10, 11, 12 and 14 (also known as MSVS 2003, 2005, 2008, 2010, 2012, 2013
 and 2015 respectively).
 
-Simply open wx_vcN.sln (for N=7, 8, 9, 10, 11 or 12) file,
+Simply open wx_vcN.sln (for N=7, 8, 9, 10, 11, 12, or 14) file,
 select the appropriate configuration (Debug or Release, static or DLL)
 and build the solution. Notice that when building a DLL configuration,
 you may need to perform the build several times because the projects
