--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -72,6 +72,7 @@ All:
 - Add wxFileType::GetExpandedCommand() (troelsk).
 - Make it easier to convert to/from UTF-8-encoded std::string (ARATA Mizuki).
 - Add support for loading dynamic lexer in wxStyledTextCtrl (New Pagodi).
+- Handle strings with embedded NULs in wxDataStream (Nitch).
 
 All (GUI):
 
