Use backslashes in MSW installation instructions
Also use %WXWIN% in the paths for clarity.

Closes https://github.com/wxWidgets/wxWidgets/pull/295

--- a/docs/msw/install.txt
+++ b/docs/msw/install.txt
@@ -50,7 +50,7 @@ NB: If you checked your sources from version control repository and
     problem by creating a symbolic link to setup0.h instead of making
     a copy of it using mklink, from an admin command prompt:
 
-        cd include/wx/msw/
+        cd %WXWIN%\include\wx\msw\
         mklink setup.h setup0.h
 
 
@@ -93,7 +93,7 @@ Microsoft Visual C++ Compilation
    See "Configuring the Build" for more information about the
    additional parameters that can be specified on the command line.
 
-2. To verify your build, change the directory to samples\minimal and
+2. To verify your build, change the directory to %WXWIN%\samples\minimal and
    run the same nmake command (with the same parameters there), this
    should create a working minimal wxWidgets sample.
 
@@ -146,7 +146,7 @@ Improve debugging for Visual Studio 2012+:
 Debug visualizers for Visual Studio 2012+ are provided which makes inspecting
 various wxWidgets classes easier to view while debugging. To use them:
 
-1. Open the folder misc/msvc
+1. Open the folder %WXWIN%\misc\msvc
 2. Open the folder %USERPROFILE%\My Documents\Visual Studio 2012\Visualizers\
    (or the corresponding location for newer versions, e.g. ...2013\Visualizers)
 3. Copy wxWidgets.natvis and autoexp.inc
@@ -290,7 +290,7 @@ debug mode, edit makefile.bcc and change /aa to /Tpe in link commands.
 Using the Debugger and IDE in BDS or Turbo Explorer
 ---------------------------------------------------
 
-Doubleclick / open samples\minimal\borland.bdsproj. The current version
+Doubleclick / open %WXWIN%\samples\minimal\borland.bdsproj. The current version
 is to be used with a dynamic build of wxWidgets-made by running
 make -f Makefile.bcc -DBUILD=debug -DSHARED=1
 in wxWidgets\build\msw. You also need the wxWidgets\lib\bcc_dll
@@ -332,8 +332,8 @@ Library configuration
 ----------------------------------------------------------------
 
 While it is never necessary to do it, you may want to change some of
-the options in the include/wx/msw/setup.h file before building wxWidgets.
-This file is heavily commented, please read it and enable or disable
+the options in the %WXWIN%\include\wx\msw\setup.h file before building
+wxWidgets. This file is heavily commented, please read it and enable or disable
 the features you would like to compile wxWidgets with[out].
 
 Notice that this file is later copied into a directory under lib for
@@ -461,7 +461,7 @@ CFG=<configuration name>
   different setup.h settings coexisting in same tree. The value of
   this option is appended to the build directories names. This is
   useful for building the library in some non-default configuration,
-  e.g. you could change wxUSE_STL to 1 in include/wx/msw/setup.h and
+  e.g. you could change wxUSE_STL to 1 in %WXWIN%\include\wx\msw\setup.h and
   then build with "CFG=-stl". Alternatively, you could build with e.g.
   "RUNTIME_LIBS=static CFG=-mt" when using MSVC.
 
@@ -488,15 +488,15 @@ Building Applications Using wxWidgets
 NB: The makefiles and project files provided with wxWidgets samples show which
     flags should be used when building applications using wxWidgets so in case
     of a problem, e.g. if the instructions here are out of date, you can always
-    simply copy a makefile or project file from samples\minimal or some other
-    sample and adapt it to your application.
+    simply copy a makefile or project file from %WXWIN%\samples\minimal or some
+    other sample and adapt it to your application.
 
 Independently of the compiler and make/IDE you are using you must do the
 following to use wxWidgets sources under the directory $WXWIN (notice that
 different tool chains refer to environment variables such as WXWIN in
 different ways, e.g. MSVC users should use $(WXWIN) instead of just $WXWIN):
 
-* Add $WXWIN/include to the
+* Add $WXWIN\include to the
   - compiler
   - resource compiler
   include paths.
@@ -507,7 +507,7 @@ different ways, e.g. MSVC users should use $(WXWIN) instead of just $WXWIN):
   - WXUSINGDLL if you are using DLL build of wxWidgets.
 * If using MSVC 7 only (i.e. not for later versions), also define
   wxUSE_RC_MANIFEST=1 and WX_CPU_X86.
-* Add $WXWIN/lib/prefix_lib-or-dll to the libraries path. The prefix depends
+* Add $WXWIN\lib\prefix_lib-or-dll to the libraries path. The prefix depends
   on the compiler, by default it is "vc" for MSVC, "gcc" for g++ and so on.
 * Add the list of libraries to link with to the linker input. The exact list
   depends on which libraries you use and whether you built wxWidgets in
@@ -519,7 +519,7 @@ different ways, e.g. MSVC users should use $(WXWIN) instead of just $WXWIN):
 
 
 Microsoft Visual C++ users can simplify the linker setup by prepending
-"$(WXWIN)/include/msvc" to the include path (it must come before the
-"$(WXWIN)/include" part!) and omitting the last step: the required libraries
+"$(WXWIN)\include\msvc" to the include path (it must come before the
+"$(WXWIN)\include" part!) and omitting the last step: the required libraries
 will be linked in automatically using the "#pragma comment(lib)" feature of
 this compiler.
