Add support for returning item location to wxGTK wxMimeTypesManager.
This is a squash merge of gtk_mimetype branch from
https://github.com/Hanmac/wxWidgets.git with some extra minor cleanup.

Closes https://github.com/wxWidgets/wxWidgets/pull/293

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -92,6 +92,7 @@ wxGTK:
 - Implement setting link colours in wxHyperlinkCtrl for GTK+3 (Hanmac).
 - Support background colour in wxDataViewCtrl attributes.
 - Improve wxSpinCtrl best size calculation.
+- Implement support for icon locations in wxMimeTypesManager (Hanmac).
 
 wxMSW:
 
