Don't crash in wxTextFile::GetLastLine() if the file is empty
Just return a reference to an empty wxString, as GetFirstLine() already does
(although this is actually questionable -- what if this string is modified?).

See #17283.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -73,6 +73,7 @@ All:
 - Make it easier to convert to/from UTF-8-encoded std::string (ARATA Mizuki).
 - Add support for loading dynamic lexer in wxStyledTextCtrl (New Pagodi).
 - Handle strings with embedded NULs in wxDataStream (Nitch).
+- Don't crash in wxTextFile::GetLastLine() if the file is empty (crohr).
 
 All (GUI):
 
