Include OSX 10.12 name and branding in wxGetOsDescription()
Starting with 10.12 OSX will be renamed to macOS. The name for version 10.12
is Sierra.

Closes https://github.com/wxWidgets/wxWidgets/pull/297

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -114,6 +114,7 @@ wxOSX:
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
 - Implement wxDataViewChoiceByIndexRenderer (wanup).
 - Fix unnecessary indentation in list-like wxDataViewCtrl (Andreas Falkenhahn).
+- Recognize macOS 10.12 Sierra in wxGetOsDescription() (Tobias Taschner).
 
 Unix:
 
