Fix preserving selection when changing selection mode in wxGrid
The loop over the existing selection was buggy and took into account only one
corner of the block instead of the entire block and also skipped some blocks
entirely.

Closes #17572.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -90,6 +90,7 @@ All (GUI):
 - Add wxListCtrl::SetHeaderAttr().
 - Add support for using markup in wxDataViewCtrl text items.
 - Implement auto complete in generic wxSearchCtrl (Eric Jensen).
+- Fix preserving selection when changing selection mode in wxGrid (jonkraber).
 
 wxGTK:
 
