Make Ctrl+A not work in multiline wxTextCtrl in MSW
The native EDIT control doesn't handle this key combination, but RICHEDIT does
and people just expect it to work, so handle it at wxMSW level.

Closes https://github.com/wxWidgets/wxWidgets/pull/300

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -150,6 +150,7 @@ wxMSW:
   methods return wxAccStatus::wxACC_NOT_SUPPORTED.
 - Return null BSTR from wxIAccessible if string returned from wxAccesible
   method is empty.
+- Handle Ctrl-A in non-rich multiline text controls (Jens Göpfert).
 
 wxOSX:
 
