--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -108,6 +108,7 @@ wxMSW:
 - Fix MDI menu display after failure to create a child frame (troelsk).
 - Fix wxScreenDC::GetSize() with multiple monitors (iwbnwif).
 - Fix background colour returned by wxTextCtrl::GetStyle() (Andreas Falkenhahn).
+- Revert to using equally-sized buttons in wxToolBar by default.
 
 wxOSX:
 
