Ignore hints on wxTE_PASSWORD controls when not supported natively
There is no way to show the hint without native support in a control with
wxTE_PASSWORD style, so simply ignore them completely in this case.

Closes #17078.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -91,6 +91,7 @@ All (GUI):
 - Add support for using markup in wxDataViewCtrl text items.
 - Implement auto complete in generic wxSearchCtrl (Eric Jensen).
 - Fix preserving selection when changing selection mode in wxGrid (jonkraber).
+- Fix wxTextEntry::SetHint() with wxTE_PASSWORD in generic implementation.
 
 wxGTK:
 
