Revert using an event object for waking up event loop in wxMSW
This reverts 5fe29ac87a8cd2b2b69bf1f501c9c6c36517dd13 ("Make main thread wake
up code more efficient and less error-prone in wxMSW") as, while being more
efficient, the new code doesn't work at all when we're not running the message
loop ourselves as it happens when the user opens a menu or starts resizing a
window because in both cases Windows runs a local message loop dispatching the
messages itself and this message loop doesn't react to our event object being
signalled.

So this approach can't work and needs to be reverted, even if it reintroduces
the danger of overflowing the message queue (see #9053).

Closes #17579.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -110,6 +110,7 @@ wxMSW:
 - Fix wxScreenDC::GetSize() with multiple monitors (iwbnwif).
 - Fix background colour returned by wxTextCtrl::GetStyle() (Andreas Falkenhahn).
 - Revert to using equally-sized buttons in wxToolBar by default.
+- Restore dispatching wxThreadEvent while resizing the window broken in 3.1.0.
 
 wxOSX:
 
