Hide empty wxCheckBoxes in wxGTK to fix display problem
Focus rectangle was still drawn around the label when it was empty with some
themes, so hide it completely to ensure this doesn't happen.

Closes #17443.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -101,6 +101,7 @@ wxGTK:
 - Support background colour in wxDataViewCtrl attributes.
 - Improve wxSpinCtrl best size calculation.
 - Implement support for icon locations in wxMimeTypesManager (Hanmac).
+- Cosmetic fix for empty wxCheckBoxes display (Chuddah).
 
 wxMSW:
 
