--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -74,7 +74,6 @@ All:
 - Add support for loading dynamic lexer in wxStyledTextCtrl (New Pagodi).
 - Handle strings with embedded NULs in wxDataStream (Nitch).
 - Don't crash in wxTextFile::GetLastLine() if the file is empty (crohr).
-- Many fixes and improvements in Direct2D, Cairo, and GDI+ graphics renderers.
 
 All (GUI):
 
@@ -92,6 +91,8 @@ All (GUI):
 - Implement auto complete in generic wxSearchCtrl (Eric Jensen).
 - Fix preserving selection when changing selection mode in wxGrid (jonkraber).
 - Fix wxTextEntry::SetHint() with wxTE_PASSWORD in generic implementation.
+- Many fixes and improvements in Direct2D, Cairo, and GDI+ graphics renderers.
+- Fix and unify clipping region support for MSW and GTK+.
 
 wxGTK:
 
