--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -120,7 +120,7 @@ wxMSW:
 wxOSX:
 
 - Fix handling of non-BMP characters in GetPartialTextExtents() (ARATA Mizuki).
-- Implement wxGetDisplaySizeMM() correctly (David Vanderson).
+- Implement wxGetDisplaySizeMM() and fix printing DPI (David Vanderson).
 - Remove extra borders around wxFilePickerCtrl (John Roberts).
 - Set up extensions filter correctly in wxFileDialog (nick863).
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
