--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -96,6 +96,7 @@ All (GUI):
 - Fix rescaling of wxImage.
 - Fix displaying edited value of wxUIntProperty (wxPropertyGrid).
 - Fix displaying validation errors for numeric wxPropertyGrid properties.
+- Add wxSYS_CARET_{ON,OFF,TIMEOUT}_MSEC system settings (brawer).
 
 wxGTK:
 
