Work around unwanted MacOpenFiles() calls in wxOSX applications
Don't try to open any command line arguments as files by using the workaround
from Colin Barrett (see https://bugzilla.mozilla.org/show_bug.cgi?id=366009).

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -128,6 +128,7 @@ wxOSX:
 - Implement wxDataViewChoiceByIndexRenderer (wanup).
 - Fix unnecessary indentation in list-like wxDataViewCtrl (Andreas Falkenhahn).
 - Recognize macOS 10.12 Sierra in wxGetOsDescription() (Tobias Taschner).
+- Don't try to open command line arguments as files (Jeff Hostetler).
 
 Unix:
 
