Fix use of dangling reference in wxFileSystemWatcher Unix code
Don't reference the "watch" object after possibly destroying it when handling
IN_DELETE_SELF inotify notification.

Closes #17122.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -107,6 +107,7 @@ wxGTK:
 - Improve wxSpinCtrl best size calculation.
 - Implement support for icon locations in wxMimeTypesManager (Hanmac).
 - Cosmetic fix for empty wxCheckBoxes display (Chuddah).
+- Fix crashes in wxFileSystemWatcher implementation (David Hart).
 
 wxMSW:
 
