Fix wxBitmap ctor from XBM in wxGTK
Width and height were exchanged in the loops, so the conversion code didn't
work correctly and overflowed the pixel buffer (due to extra padding in the
row stride) for non-square bitmaps. It also resulted in a completely wrong
bitmap appearance, but somehow this managed to go unnoticed, unlike the memory
errors.

Closes #17633.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -108,6 +108,7 @@ wxGTK:
 - Implement support for icon locations in wxMimeTypesManager (Hanmac).
 - Cosmetic fix for empty wxCheckBoxes display (Chuddah).
 - Fix crashes in wxFileSystemWatcher implementation (David Hart).
+- Fix wxBitmap ctor from XBM for non-square bitmaps.
 
 wxMSW:
 
