--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -97,6 +97,7 @@ All (GUI):
 - Fix displaying edited value of wxUIntProperty (wxPropertyGrid).
 - Fix displaying validation errors for numeric wxPropertyGrid properties.
 - Add wxSYS_CARET_{ON,OFF,TIMEOUT}_MSEC system settings (brawer).
+- Add wxGraphicsContext::GetClipBox().
 
 wxGTK:
 
