Fix wxGraphicsMatrix::TransformDistance for Direct2D implementation
Current transformation matrix without translation component should be used in calculations.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -120,6 +120,7 @@ wxMSW:
 - Fix background colour returned by wxTextCtrl::GetStyle() (Andreas Falkenhahn).
 - Revert to using equally-sized buttons in wxToolBar by default.
 - Restore dispatching wxThreadEvent while resizing the window broken in 3.1.0.
+- Fix wxGraphicsMatrix::TransformDistance for Direct2D renderer.
 
 wxOSX:
 
