Implement Flush() method for Cairo graphics context
wxCairoContext implementation for wxMSW and wxQT use internally helper surface so there is a need to flush it on demand.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -102,6 +102,7 @@ All (GUI):
 - Fix wxGCDC::Clear() for rotated graphics context.
 - Fix wxGCDC::GetClippingBox() for transformed wxDC (MSW, GTK+).
 - Add support for affine transformation matrix in wxGCDC.
+- Add wxGraphicsContext::Flush() for Cairo renderer.
 
 wxGTK:
 
