Fix retrieving bounding box coordinates
Bounding box coordinates have to be calculated and stored internally in device units to be independent on changes of logical coordinates between calls to wxDC::CalcBoundingBox.
These stored coordinates are converted to the logical units on demand when they are retrieved with call to wxDC::MinX, MinY, MaxX or MaxY.

Closes #17667.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -105,6 +105,7 @@ All (GUI):
 - Add wxGraphicsContext::Flush() for Cairo renderer.
 - Add wxStyledTextEvent::GetListCompletionMethod() (NewPagodi).
 - Add wxEVT_STC_AUTOCOMP_COMPLETED event (NewPagodi).
+- Fix retrieving bounding box for wxDC with transformed coordinates.
 
 wxGTK:
 
