--- a/samples/internat/fr/internat.po
+++ b/samples/internat/fr/internat.po
@@ -2,17 +2,47 @@
 # Copyright (C) 1999 wxWindows development team
 # Vadim Zeitlin <zeitlin@dptmaths.ens-cachan.fr>
 #
-#: internat.cpp:146
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: wxWindows 2.0 i18n sample\n"
 "POT-Creation-Date: 1999-01-13 18:19+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2016-09-20 19:38+0200\n"
 "Last-Translator: Vadim Zeitlin <zeitlin@dptmaths.ens-cachan.fr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language-Team: \n"
+"Language: fr\n"
+"X-Generator: Poedit 1.8.7\n"
+
+msgid "item"
+msgstr "item0"
+
+msgctxt "cont1"
+msgid "item"
+msgstr "item1"
+
+msgctxt "cont2"
+msgid "item"
+msgstr "item2"
+
+msgid "sing"
+msgid_plural "plur"
+msgstr[0] "sing0"
+msgstr[1] "plur0"
+
+msgctxt "cont1"
+msgid "sing"
+msgid_plural "plur"
+msgstr[0] "sing1"
+msgstr[1] "plur1"
+
+msgctxt "cont2"
+msgid "sing"
+msgid_plural "plur"
+msgstr[0] "sing2"
+msgstr[1] "plur2"
 
 #: internat.cpp:98
 msgid "International wxWindows App"
@@ -43,9 +73,11 @@ msgid "&Test"
 msgstr "&Test"
 
 #: internat.cpp:138
-msgid "I18n sample\n"
+msgid ""
+"I18n sample\n"
 "© 1998, 1999 Vadim Zeitlin and Julian Smart"
-msgstr "Exemple d'i18n\n"
+msgstr ""
+"Exemple d'i18n\n"
 "© 1998, 1999 Vadim Zeitlin et Julian Smart"
 
 #: internat.cpp:139
