Fix wxMemoryDC::Blit() with itself as source in wxMSW
Don't use StretchDIBits() native function as it doesn't seem to handle the
case when its source and destination are the same correctly.

Closes #17666.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -134,6 +134,7 @@ wxMSW:
 - Fix wxGraphicsMatrix::TransformDistance for Direct2D renderer.
 - Fix wxDC::Clear() for rotated DC.
 - Fix wxDC::GetClippingBox() for transformed wxDC.
+- Fix wxMemoryDC::Blit() with itself as source (Tim Roberts).
 
 wxOSX:
 
