Add wxACC_INVALID_ARG error code to wxAccStatus enum
Since accessibility framework supports signaling E_INVALIDARG error, it would be good to have a corresponding flag indicating this error in wxAccessible functions.
In response to wxACC_INVALID_ARG returned by wxAccessible functions, wxIAccessible should return E_INVALIDARG to the framework.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -137,6 +137,8 @@ wxMSW:
 - Fix wxMemoryDC::Blit() with itself as source (Tim Roberts).
 - Return proper value from wxIAccessible::get_accSelection() if no children
   are selected.
+- Add wxAccStatus::wxACC_INVALID_ARG error code to indicate argument-related
+  errors in wxAccessible methods.
 
 wxOSX:
 
