Adjust point coordinates in wxDataViewCtrl::HitTest
Point coordinates passed from wxDataViewCtrl::HitTest() to wxDataViewMainWindow::HitTest()
should be converted from wxDataViewCtrl client coordinates to wxDataViewMainWindow client coordinates because they can different due to the presence of the header in wxDataViewCtrl client area.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -107,6 +107,7 @@ All (GUI):
 - Add wxEVT_STC_AUTOCOMP_COMPLETED event (NewPagodi).
 - Fix retrieving bounding box for wxDC with transformed coordinates.
 - Fix wxGraphicsMatrixData::Concat() for Direct2D and Cairo renderers.
+- Fix calculating point position in wxDataViewCtrl::HitTest().
 
 wxGTK:
 
