Adjust rectangle coordinates returned by wxDataViewCtrl::GetItemRect()
Because query for item rectangle is executed in the context of wxDataViewCtrl so coordinates of retrieved rectangle should be specified in wxDataViewCtrl client coordinates (not in wxDataViewMainWindow coordinates).
To return correct coordinates it is necessary to convert rectangle coordinates retrieved by wxDataViewMainWindow::GetItemRect() from wxDataViewMainWindow client coordinates to wxDataViewCtrl client coordinates (they can different due to the presence of the header in wxDataViewCtrl client area).

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -108,6 +108,7 @@ All (GUI):
 - Fix retrieving bounding box for wxDC with transformed coordinates.
 - Fix wxGraphicsMatrixData::Concat() for Direct2D and Cairo renderers.
 - Fix calculating point position in wxDataViewCtrl::HitTest().
+- Fix position of the rectangle returned by wxDataViewCtrl::GetItemRect().
 
 wxGTK:
 
