Return DISP_E_MEMBERNOTFOUND error to the accessibility framework, if necessary
In response to wxACC_NOT_SUPPORTED returned by wxAccessible methods, wxIAccessible should return DISP_E_MEMBERNOTFOUND to the framework.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -141,6 +141,8 @@ wxMSW:
   are selected.
 - Add wxAccStatus::wxACC_INVALID_ARG error code to indicate argument-related
   errors in wxAccessible methods.
+- Return DISP_E_MEMBERNOTFOUND error code from wxIAccessible if wxAccessible
+  methods return wxAccStatus::wxACC_NOT_SUPPORTED.
 
 wxOSX:
 
