--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -143,6 +143,8 @@ wxMSW:
   errors in wxAccessible methods.
 - Return DISP_E_MEMBERNOTFOUND error code from wxIAccessible if wxAccessible
   methods return wxAccStatus::wxACC_NOT_SUPPORTED.
+- Return null BSTR from wxIAccessible if string returned from wxAccesible
+  method is empty.
 
 wxOSX:
 
