--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -157,6 +157,7 @@ wxOSX:
 - Fix unnecessary indentation in list-like wxDataViewCtrl (Andreas Falkenhahn).
 - Recognize macOS 10.12 Sierra in wxGetOsDescription() (Tobias Taschner).
 - Don't try to open command line arguments as files (Jeff Hostetler).
+- Implement wxDataViewCtrl::SetRowHeight().
 
 Unix:
 
