Add API to control OS X wxTextCtrl’s smart behavior
Allow the user to customize smart quotes and dashes substutions on OS X
and also provide the OSXDisableAllSmartSubstitutions() method for
disabling them all at once.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -157,6 +157,8 @@ wxOSX:
 - Recognize macOS 10.12 Sierra in wxGetOsDescription() (Tobias Taschner).
 - Don't try to open command line arguments as files (Jeff Hostetler).
 - Implement wxDataViewCtrl::SetRowHeight().
+- Add OSXEnableAutomaticQuoteSubstitution(), OSXEnableAutomaticDashSubstitution()
+  and OSXDisableAllSmartSubstitutions() to control wxTextCtrl smart behavior.
 
 Unix:
 
