Implement wxDataViewRenderer::GetAccessibleDescription() method
The purpose of this method is to provide a textual description of the renderer's content to the class implementing accessibility framework in wxDVC (wxDataViewCtrlAccessible).
It is exposed if wxUSE_ACCESSIBILITY is set to 1.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -109,6 +109,7 @@ All (GUI):
 - Fix wxGraphicsMatrixData::Concat() for Direct2D and Cairo renderers.
 - Fix calculating point position in wxDataViewCtrl::HitTest().
 - Fix position of the rectangle returned by wxDataViewCtrl::GetItemRect().
+- Add wxDataViewRenderer::GetAccessibleDescription().
 
 wxGTK:
 
