Don't create wxWindowAccessible by default
Don't unconditionally use wxWidgets' implementation of IAccessible for
all windows when wxUSE_ACCESSIBILITY is 1, because it is inferior to the
system provided one: it often lacks appropriate labels, doesn't fully
support navigation and wxIAccessible isn't fully implemented.

The approach, when using MSAA, recommended by Microsoft documentation is
to customize accessibility for custom controls only, by proxying to the
standard and overriding what is necessary. By making this change, user
code is still allowed to customize accessibility if needed, without
negatively impacting standard controls that don't need any custom code.

See also https://github.com/wxWidgets/wxWidgets/pull/340

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -38,6 +38,10 @@ Changes in behaviour not resulting in compilation errors
   for getting the micro version. If you override GetToolkitVersion() you need
   to add this new third parameter.
 
+- wxWindow::CreateAccessible() doesn't return accessible object by default
+  anymore and GetOrCreateAccessible() may return NULL, indicating that native
+  system-provided accessibility should be used.
+
 Changes in behaviour which may result in build errors
 -----------------------------------------------------
 
